--- a/module3/index.html
+++ b/module3/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="sushi" id="sus">
             <h3>Sushi</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore delectus modi aperiam. Enim exercitationem quam, ratione harum sed iste maiores esse maxime corporis sit, similique numquam saepe adipisci perspiciatis omnis odio iure molestiae eum illo doloribus repellendus, dolorum accusantium beatae? Voluptatibus quaerat sapiente officiis, voluptatem dicta, vel veritatis soluta neque illum eligendi odit modi delectus facere nostrum rem rerum numquam minima corrupti harum vitae quod maxime possimus! Nihil odit voluptates nisi optio sed. Fuga id nulla illum iste architecto, esse libero exercitationem, consequuntur praesentium sequi dolorum nobis doloribus, alias aperiam ex? Quasi nam in consectetur ea ducimus culpa earum tempora eius.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo iste perspiciatis consectetur necessitatibus deserunt saepe ratione sequi, dolorum eaque amet eius alias ullam libero iusto, sed itaque fugit maiores sunt rem atque debitis aspernatur, illo ex! Eius perspiciatis ab dicta sequi quisquam fugit, accusantium deserunt quidem est? Deserunt sunt optio suscipit modi facere vitae porro nam dolore consequuntur. Temporibus facilis obcaecati numquam sunt voluptate voluptatem, laudantium delectus atque dolores maxime sint ad nam beatae dicta labore exercitationem consequatur soluta animi, porro ratione illum consequuntur provident aperiam? Odit minima maiores laborum, ipsam totam facilis quasi id, vitae, reiciendis molestias quod distinctio.</p>
         </div>
     </div>
 </body>
