--- a/module3/index.html
+++ b/module3/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
     </header>
-    
+    <h2>OUR MENU</h2>
     <div class="container">
        
         <div class="chicken" id="chi">
